specify node-version: 18 in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
       # Install Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
       # Install dependencies
       - name: Install dependencies
