--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,56 @@
 name: Deploy SvelteKit to GitHub Pages
 
 on:
-  # Trigger deployment on push to the main branch
+  # Deploy on push to main
   push:
-    branches:
-      - main
+    branches: [main]
 
-  # Allow for manual deployment
+  # Allow manual deployment
   workflow_dispatch:
 
-# Allow this job to clone the repo and create a page deployment
+# Grant GITHUB_TOKEN permissions needed for deployment to Pages
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the repository
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # Install Node.js
-      - name: Setup Node.js
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Build the project for static export
-      - name: Build the SvelteKit project
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+        with:
+          static_site_generator: sveltekit
+
+      - name: Build
         run: npm run build
 
-      # Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+          path: build
+
+  deploy:
+    needs: build
+
+    # Deploy to github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+      - uses: actions/deploy-pages@v4
