--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   # Deploy on push to main...
   push:
-    branches: [main, typst-rewrite]
+    branches: [main]
 
   # ...or manually.
   workflow_dispatch:
