more migrating, replace bg with tsparticles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "winstonyli.github.io",
-    "version": "0.0.1",
     "private": true,
     "scripts": {
         "dev": "vite dev",
@@ -16,7 +15,9 @@
         "@sveltejs/adapter-static": "^3.0.8",
         "@sveltejs/kit": "^2.21.1",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
+        "@tailwindcss/postcss": "^4.1.8",
         "@tailwindcss/typography": "^0.5.16",
+        "@tsparticles/svelte": "^3.1.1",
         "@types/dom-view-transitions": "^1.0.6",
         "@types/eslint": "^9.6.1",
         "daisyui": "^5.0.40",
@@ -30,6 +31,7 @@
     },
     "type": "module",
     "dependencies": {
-        "@tailwindcss/postcss": "^4.1.8"
+        "@tsparticles/move-parallax": "^3.8.1",
+        "@tsparticles/preset-triangles": "^3.2.0"
     }
 }
