--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,8 @@
         "enabled": true,
         "rules": {
             "style": {
-                "useConst": "off"
+                "useConst": "off",
+                "useImportType": "off"
             },
             "recommended": true
         }
