--- a/package.json
+++ b/package.json
@@ -9,29 +9,24 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "devDependencies": {
-        "@fontsource/fira-mono": "^5.2.6",
-        "@fontsource/fira-sans": "^5.2.5",
+        "@fontsource/pt-serif": "^5.2.5",
         "@iconify/json": "^2.2.342",
         "@sveltejs/adapter-static": "^3.0.8",
         "@sveltejs/kit": "^2.21.1",
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@tailwindcss/postcss": "^4.1.8",
         "@tailwindcss/typography": "^0.5.16",
+        "@tsparticles/move-parallax": "^3.8.1",
+        "@tsparticles/preset-triangles": "^3.2.0",
         "@tsparticles/svelte": "^3.1.1",
         "@types/dom-view-transitions": "^1.0.6",
-        "@types/eslint": "^9.6.1",
         "daisyui": "^5.0.40",
         "svelte": "^5.33.5",
         "svelte-check": "^4.2.1",
         "tailwindcss": "^4.1.8",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.33.0",
         "unplugin-icons": "^22.1.0"
     },
-    "type": "module",
-    "dependencies": {
-        "@tsparticles/move-parallax": "^3.8.1",
-        "@tsparticles/preset-triangles": "^3.2.0"
-    }
+    "type": "module"
 }
