--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
+      - name: Install Bun
+        uses: actions/setup-bun@v42
         with:
-          node-version: 20
+          bun-version: 1.2.0
 
       - name: Install dependencies
-        run: npm install
+        run: bun install
 
       - name: Install Typst
         uses: typst-community/setup-typst@v3
@@ -49,7 +49,7 @@ jobs:
           static_site_generator: sveltekit
 
       - name: Build
-        run: npm run build
+        run: bun run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
