--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,21 +27,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Typst
+        uses: typst-community/setup-typst@v3
+
       - name: Install Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.2.0
 
-      - name: Install dependencies
+      - name: Install other dependencies
         run: bun install
-
-      - name: Install Typst
-        uses: typst-community/setup-typst@v3
-
-      - name: Compile resume
-        run: |
-          typst compile static/resume.typ static/resume.pdf
-          typst compile static/resume.typ static/resume.svg
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
