--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "scripts": {
         "dev": "vite dev",
-        "build": "build:typst && vite build",
+        "build": "bun run build:typst && vite build",
         "build:typst": "bunx typst compile static/resume.typ static/resume.pdf && bunx typst compile static/resume.type static/resume.svg",
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
