like, a lot of misc refactors & ui improvements

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,9 @@
 {
-    "useTabs": true,
     "singleQuote": true,
+    "tabWidth": 4,
     "trailingComma": "all",
     "printWidth": 100,
-    "plugins": [
-        "prettier-plugin-svelte",
-        "prettier-plugin-tailwindcss"
-    ],
+    "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
     "tailwindStylesheet": "./src/routes/layout.css",
     "overrides": [
         {
