--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-	"name": "winstonyli.github.io",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "bun run build:typst && vite build",
-		"build:typst": "bunx typst compile static/resume.typ static/resume.pdf && bunx typst compile static/resume.typ static/resume.svg",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.39.1",
-		"@fontsource/pt-serif": "^5.2.5",
-		"@iconify/json": "^2.2.342",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.21.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/postcss": "^4.1.8",
-		"@tailwindcss/typography": "^0.5.16",
-		"@tsparticles/move-parallax": "^3.8.1",
-		"@tsparticles/preset-triangles": "^3.2.0",
-		"@tsparticles/svelte": "^3.1.1",
-		"@types/dom-view-transitions": "^1.0.6",
-		"@types/node": "^24",
-		"daisyui": "^5.0.40",
-		"eslint": "^9.39.1",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.13.1",
-		"globals": "^16.5.0",
-		"prettier": "^3.7.4",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.7.2",
-		"svelte": "^5.33.5",
-		"svelte-check": "^4.2.1",
-		"tailwindcss": "^4.1.8",
-		"tslib": "^2.8.1",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.48.1",
-		"unplugin-icons": "^22.1.0"
-	},
-	"type": "module"
+    "name": "winstonyli.github.io",
+    "private": true,
+    "scripts": {
+        "build": "bun run build:typst && vite build",
+        "build:typst": "bunx typst compile static/resume.typ static/resume.pdf && bunx typst compile static/resume.typ static/resume.svg"
+    },
+    "devDependencies": {
+        "@eslint/compat": "^2.0.0",
+        "@eslint/js": "^9.39.2",
+        "@fontsource/pt-serif": "^5.2.8",
+        "@iconify/json": "^2.2.418",
+        "@myriaddreamin/typst-ts-node-compiler": "^0.7.0-rc1",
+        "@sveltejs/adapter-static": "^3.0.10",
+        "@sveltejs/kit": "^2.49.2",
+        "@sveltejs/vite-plugin-svelte": "^6.2.1",
+        "@tailwindcss/postcss": "^4.1.18",
+        "@tailwindcss/typography": "^0.5.19",
+        "@tsparticles/move-parallax": "3.8.1",
+        "@tsparticles/preset-triangles": "^3.2.0",
+        "@tsparticles/svelte": "^3.1.1",
+        "@types/dom-view-transitions": "^1.0.6",
+        "@types/node": "^25.0.3",
+        "daisyui": "^5.5.14",
+        "eslint": "^9.39.2",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-svelte": "^3.13.1",
+        "globals": "^16.5.0",
+        "prettier": "^3.7.4",
+        "prettier-plugin-svelte": "^3.4.1",
+        "prettier-plugin-tailwindcss": "^0.7.2",
+        "svelte": "^5.46.0",
+        "svelte-check": "^4.3.4",
+        "tailwindcss": "^4.1.18",
+        "tslib": "^2.8.1",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.50.0",
+        "unplugin-icons": "^22.5.0"
+    },
+    "type": "module"
 }
